@@ -2,7 +2,7 @@ include(setup_paths.cmake)
 
 execute_process(
   WORKING_DIRECTORY ${office_dir}
-  COMMAND ${perl} ${px_dir}/falsecolor.pl -e -i  test/raytest_rpict.hdr
+  COMMAND ${perl} ${px_dir}/falsecolor.pl -e -i test/raytest_rpict.hdr
   OUTPUT_FILE test/raytest_falsecolor.hdr
   RESULT_VARIABLE res
 )
@@ -11,7 +11,7 @@ if(NOT ${res} EQUAL 0)
 endif()
 
 file(READ ${office_dir}/test/raytest_falsecolor.hdr test_output)
-if(test_output MATCHES "minv")
+if(test_output MATCHES "pcomb")
   message(STATUS "passed")
 else()
   message(STATUS "failed")
