@@ -18,7 +18,7 @@ LN = ln
 SPECIAL =
 
 INSTDIR = /usr/local/bin
-DEVDIR = $(INSTDIR)/dev
+DEVDIR = $(INSTDIR)
 
 LIBDIR = /usr/local/lib/ray
 
